--- a/AncesTree-Frontend/package.json
+++ b/AncesTree-Frontend/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.8",
+    "axios": "^1.6.5",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-password-checklist": "^1.5.0",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
