--- a/AncesTree-Frontend/package.json
+++ b/AncesTree-Frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.2.0",
     "react-password-checklist": "^1.5.0",
     "react-router-dom": "^6.21.1"
