--- a/AncesTree-Frontend/package.json
+++ b/AncesTree-Frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-d3-tree": "^3.6.2",
     "react-dom": "^18.2.0",
+    "react-otp-input": "^3.1.1",
     "react-password-checklist": "^1.5.0",
     "react-router-dom": "^6.21.1"
   },
