--- a/AncesTree-Frontend/package.json
+++ b/AncesTree-Frontend/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.8",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.4",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "gsap": "^3.12.2",
-    "react": "^18.2.0",
+    "react": "^17.0.0 || ^18.0.0",
     "react-d3-tree": "^3.6.2",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-images-uploading": "^3.1.7",
     "react-otp-input": "^3.1.1",
     "react-password-checklist": "^1.5.0",
     "react-router-dom": "^6.21.1"
@@ -33,5 +39,9 @@
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
