--- a/AncesTree-Frontend/package.json
+++ b/AncesTree-Frontend/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-d3-tree": "^3.6.2",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-icons": "^5.0.1",
     "react-images-uploading": "^3.1.7",
     "react-otp-input": "^3.1.1",
     "react-password-checklist": "^1.5.0",
