--- a/AncesTree-Frontend/package.json
+++ b/AncesTree-Frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.19.4",
     "axios": "^1.6.5",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "gsap": "^3.12.5",
     "react": "^17.0.0 || ^18.0.0",
