--- a/AncesTree-Frontend/package.json
+++ b/AncesTree-Frontend/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@gsap/react": "^2.1.0",
     "@material-tailwind/react": "^2.1.8",
     "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.19.4",
     "axios": "^1.6.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
-    "gsap": "^3.12.2",
+    "gsap": "^3.12.5",
     "react": "^17.0.0 || ^18.0.0",
     "react-d3-tree": "^3.6.2",
     "react-dom": "^17.0.0 || ^18.0.0",
