--- a/AncesTree-Frontend/package.json
+++ b/AncesTree-Frontend/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.10",
     "gsap": "^3.12.5",
     "react": "^17.0.0 || ^18.0.0",
+    "react-animated-cursor": "^2.11.2",
     "react-d3-tree": "^3.6.2",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-icons": "^5.0.1",
